@startuml
class Main {
}

class User {
- name : String
- description : String
+ getName() : String
+ getDescription() : String
}

interface Node {
- name : String
- duration : Duration
- localDate : LocalDateTime
- active : boolean
+ setName(n : String)
+ getName() : String
+ startTask()
+ stopTask()
+ getDuration() : Duration
+ getDate() : LocalDateTime
+ isActive(t : Task) : boolean
}

class Project {
- name : String
- duration : Duration
- dateTime : LocalDateTime
+ setName(str : String)
+ getName() : String
+ getDuration() : Duration
+ getDate() : LocalDateTime
}

class Task {
- name : String
- duration : Duration
- dateTime: LocalDateTime
- active : boolean
+ setName(name : String)
+ getName() : String
+ startTask()
+ stopTask()
+ getDuration() : Duration
+ getDate() : LocalDateTime
+ isActive(t : Task) : boolean
}

class Interval {
- initialTime : LocalDateTime
- finalTime : LocalDateTime
+ getInitialTime() : LocalDateTime
+ getFinalTime() : LocalDateTime

}

class Clock {
- timer : Timer
- dateTime : LocalDateTime
+ startTimer()
- tick()
}

class Data {
- projectName : String
- taskName : String
+ saveData(d : Data)
+ loadData(d : Data)
}

class DataSaver {
- projectName : String
- taskName : String
}

class DataLoader {
- projectName : String
- taskName : String
}


Project -.|> Node
Task -.|> Node
Clock -down-|> java.util.Observable
Interval -.down.-|> java.util.Observer
Project "1" o-- "*" Project
Task "*" o-- "1" Project
Interval "*" *-- "1" Task
DataSaver -|> Data
DataLoader -|> Data
Task "*" *-- "1" User
Project "*" *-- "1" User
@enduml